--- a/templates/home.html
+++ b/templates/home.html
@@ -1,45 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Car Price Predicator</title>
+	<title>Car Price Predictor</title>
 </head>
 <body>
+<h1 style="background-color:rgba(0, 204, 255, 0.603); text-align:center;">Car Price Predictor</h1>
 <form action="\" method="POST">
-<label for="Present_Price in Lakhs">Present Price of car: </label>
+<label for="Present_Price in Lakhs">Present price of car: </label>
     <input type="text" id="Present_Price" name="Present_Price" placeholder="4.5">
-<label for="kms">Kilometers Driven: </label>
+	<br>
+<label for="kms">Kilometers driven: </label>
     <input type="text" id="kms" name="kms">
+	<br>
  <label for="age">Year Bought: </label>
     <input type="text" id="age" name="age" placeholder="2018"> 
+	<br>
 <label class="card-title">No of Previous Owners</label>
                             <select name="Owners" id="Owners"
                              required="required">
-                                <option value="0">First Owner</option>
-                                <option value="1">Second Owner</option>
+							    <option value="0">-</option>
+                                <option value="1">First Owner</option>
+                                <option value="2">Second Owner</option>
                                 <option value="3">Third Owner</option>
                                
                             </select>
+	<br>
 <label class="card-title">Fuel Type</label>
                             <select name="fuel" id="fuel" required="required">
+								<option value="0">-</option>
                                 <option value="petrol">Petrol</option>
                                 <option value="diesel">Diesel</option>
                                 <option value="cng">CNG</option>
                                
                             </select>
+	<br>
 <label class="card-title">Transmission</label>
                             <select name="transmission" id="transmission" required="required">
+								<option value="0">-</option>
                                 <option value="auto">Auotmatic</option>
                                 <option value="manual">Manual</option>
                             </select>
+	<br>
 <label class="card-title">Seller Type </label>
                             <select name="seller" id="seller" required="required">
+								<option value="0">-</option>
                                 <option value="indiv">Individual</option>
                                 <option value="Dealer">Dealer</option>
                                 </select>
+	<br>
 <input type="submit" name="submit">
 </form>
-{% if context != '' %}
+<!-- {% if context != '' %}
 <p>{{ context }}</p>
-{% endif %}
+{% endif %} -->
 </body>
 </html>
+{% if context != '' %}
+{{ context }}
+{% endif %}
